samples/_failures_safe/1761083110_c6b6f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_61878310.c: In function ‘tokenize’:
./samples/SAFE/__tmp_61878310.c:174:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  174 |             char punct[2]
      |             ^~~~
./samples/SAFE/__tmp_61878310.c:174:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_61878310.c:174:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_61878310.c:174:13: error: expected declaration or statement at end of input
